# xnet

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  cmake_test_block.cmake  lint.sh
.github/workflows/: cmake-multi-platform.yml
docs/: api.md  build.md  index.md  platforms.md  usage.md
examples/: http_get.cc  http_get.cpp
include/xnet/: buffer.h  error.h  http.h  request.h  socket.h  str_view.h  string_view.h  url.h  xnet.h
ports/esp32/: socket_esp32.cc  socket_esp32.cpp  socket_esp32.h
ports/linux/: socket_linux.cc  socket_linux.cpp  socket_linux.h
ports/windows/: socket_windows.cc  socket_windows.cpp  socket_windows.h
src/: buffer.cc  buffer.cpp  http.cc  http.cpp  request.cc  request.cpp  socket_common.cc  socket_common.cpp  url.cc  url.cpp
tests/: CMakeLists.txt  test_buffer.cc  test_buffer.cpp  test_error.cc  test_helpers.h  test_http.cc  test_str_view.cc  test_string_view.cc  test_string_view.cpp  test_url.cc  test_url.cpp
